fix:消費税率計算
Add product and tax type integration for consumption tax calculation

Enhanced `ConsumptionTaxAmount` and `SalesLine` to integrate product details and tax types into consumption tax calculations. Refactored test cases to use builder patterns for improved readability and expanded test coverage for new logic.